--- a/style.css
+++ b/style.css
@@ -584,3 +584,33 @@ footer {
 .pantalla-ganador.hidden {
   display: none;
 }
+.confeti-pantalla {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9998;
+}
+
+.pantalla-ganador {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  color: gold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 4em;
+  z-index: 9999;
+  text-align: center;
+}
+
+.pantalla-ganador.hidden {
+  display: none;
+}
